// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VipInfo Dark 1`] = `
<View
  bg="defaultBackground"
  py={3}
  style={
    Array [
      Object {
        "backgroundColor": "#262523",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    bg="alternativeBackground"
    style={
      Array [
        Object {
          "backgroundColor": "#32302E",
        },
      ]
    }
  >
    <View
      bg="defaultBackground"
      p={2}
      style={
        Array [
          Object {
            "backgroundColor": "#262523",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        alignItems="center"
        border={1}
        borderColor="primary"
        borderRadius={8}
        flexDirection="column"
        height={480}
        overflow="hidden"
        position="relative"
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#FDCC26",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flexDirection": "column",
              "height": 480,
              "overflow": "hidden",
              "position": "relative",
            },
          ]
        }
      >
        <View
          alignItems="center"
          backgroundColor="primary"
          flexDirection="column"
          height={48}
          justifyContent="center"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FDCC26",
                "flexDirection": "column",
                "height": 48,
                "justifyContent": "center",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="#262523"
            fontFamily="body"
            fontSize={4}
            fontWeight="bold"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 20,
                  "fontWeight": "700",
                },
              ]
            }
          >
            VIP
          </Text>
        </View>
        <View
          alignItems="center"
          borderBottomColor="#3D3D3F"
          borderBottomWidth={1}
          flexDirection="column"
          height={73}
          justifyContent="center"
          px={29}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomColor": "#3D3D3F",
                "borderBottomWidth": 1,
                "flexDirection": "column",
                "height": 73,
                "justifyContent": "center",
                "paddingLeft": 29,
                "paddingRight": 29,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                },
              ]
            }
          >
            Chỉ với
             
            <Text
              color="primary"
              fontFamily="body"
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#FDCC26",
                    "fontFamily": "Helvetica",
                    "fontWeight": "700",
                  },
                ]
              }
            >
              15000đ/tháng
            </Text>
             
            để trở thành IVIP và
          </Text>
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                },
              ]
            }
          >
            hưởng đặc quyền của mọi 
            <Text
              color="normalText"
              fontFamily="body"
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontWeight": "700",
                  },
                ]
              }
            >
              VIP member.
            </Text>
          </Text>
        </View>
        <View
          flexDirection="column"
          height={19}
          justifyContent="center"
          marginTop={18}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "height": 19,
                "justifyContent": "center",
                "marginTop": 18,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            marginLeft={19}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "marginLeft": 19,
                },
              ]
            }
          >
            Quyền lợi đặc biệt
          </Text>
        </View>
        <View
          flexDirection="column"
          justifyContent="center"
          marginTop={28}
          paddingLeft={23}
          paddingRight={19}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "justifyContent": "center",
                "marginTop": 28,
                "paddingLeft": 23,
                "paddingRight": 19,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Âm nhạc 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  sống động đẳng cấp
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Thưởng thức kho nhạc số chất lượng cao freedata, cập nhật thường xuyên nội dung Hot
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Cài đặt nhạc chờ 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  không giới hạn
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                cài đặt tất cả nhạc chờ với giá 0 đồng
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  Không
                </Text>
                 quảng cáo
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Nghe nhạc thoải mái mà không sợ quảng cáo
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Nhạc chờ cho 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  người gọi
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#AAAAAA",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Tính năng miễn phí cho phép người gọi nghe nhạc chờ do chính mình cài đặt khi gọi tới thuê bao khác
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots VipInfo Light 1`] = `
<View
  bg="defaultBackground"
  py={3}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    bg="alternativeBackground"
    style={
      Array [
        Object {
          "backgroundColor": "#F1F1F1",
        },
      ]
    }
  >
    <View
      bg="defaultBackground"
      p={2}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        alignItems="center"
        border={1}
        borderColor="primary"
        borderRadius={8}
        flexDirection="column"
        height={480}
        overflow="hidden"
        position="relative"
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#FDCC26",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flexDirection": "column",
              "height": 480,
              "overflow": "hidden",
              "position": "relative",
            },
          ]
        }
      >
        <View
          alignItems="center"
          backgroundColor="primary"
          flexDirection="column"
          height={48}
          justifyContent="center"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FDCC26",
                "flexDirection": "column",
                "height": 48,
                "justifyContent": "center",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="#262523"
            fontFamily="body"
            fontSize={4}
            fontWeight="bold"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 20,
                  "fontWeight": "700",
                },
              ]
            }
          >
            VIP
          </Text>
        </View>
        <View
          alignItems="center"
          borderBottomColor="#3D3D3F"
          borderBottomWidth={1}
          flexDirection="column"
          height={73}
          justifyContent="center"
          px={29}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomColor": "#3D3D3F",
                "borderBottomWidth": 1,
                "flexDirection": "column",
                "height": 73,
                "justifyContent": "center",
                "paddingLeft": 29,
                "paddingRight": 29,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                },
              ]
            }
          >
            Chỉ với
             
            <Text
              color="primary"
              fontFamily="body"
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#FDCC26",
                    "fontFamily": "Helvetica",
                    "fontWeight": "700",
                  },
                ]
              }
            >
              15000đ/tháng
            </Text>
             
            để trở thành IVIP và
          </Text>
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                },
              ]
            }
          >
            hưởng đặc quyền của mọi 
            <Text
              color="normalText"
              fontFamily="body"
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontWeight": "700",
                  },
                ]
              }
            >
              VIP member.
            </Text>
          </Text>
        </View>
        <View
          flexDirection="column"
          height={19}
          justifyContent="center"
          marginTop={18}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "height": 19,
                "justifyContent": "center",
                "marginTop": 18,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontSize={2}
            fontWeight="bold"
            marginLeft={19}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "marginLeft": 19,
                },
              ]
            }
          >
            Quyền lợi đặc biệt
          </Text>
        </View>
        <View
          flexDirection="column"
          justifyContent="center"
          marginTop={28}
          paddingLeft={23}
          paddingRight={19}
          style={
            Array [
              Object {
                "flexDirection": "column",
                "justifyContent": "center",
                "marginTop": 28,
                "paddingLeft": 23,
                "paddingRight": 19,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "#262523",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Âm nhạc 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  sống động đẳng cấp
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Thưởng thức kho nhạc số chất lượng cao freedata, cập nhật thường xuyên nội dung Hot
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "#262523",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Cài đặt nhạc chờ 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  không giới hạn
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                cài đặt tất cả nhạc chờ với giá 0 đồng
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "#262523",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  Không
                </Text>
                 quảng cáo
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Nghe nhạc thoải mái mà không sợ quảng cáo
              </Text>
            </View>
          </View>
          <View
            flexDirection="row"
            marginBottom={18}
            minHeight={44}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginBottom": 18,
                  "minHeight": 44,
                },
              ]
            }
          >
            <View
              alignItems="center"
              height={18}
              justifyContent="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  },
                ]
              }
              width={18}
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={18}
                bbWidth={18}
                fill="none"
                focusable={false}
                height={18}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 18,
                      "width": 18,
                    },
                  ]
                }
                vbHeight={15}
                vbWidth={19}
                width={18}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M5.9999 11.2L1.7999 6.99998L0.399902 8.39998L5.9999 14L17.9999 1.99998L16.5999 0.599976L5.9999 11.2Z"
                    fill={4294822950}
                    fillRule={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGDefs>
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -15623794,
                          1,
                          -13045891,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint0_linear"
                      x1="15.4022"
                      x2="0.688721"
                      y1="0"
                      y2="0"
                    />
                    <RNSVGLinearGradient
                      gradient={
                        Array [
                          0,
                          -6022805,
                          1,
                          -235673,
                        ]
                      }
                      gradientTransform={null}
                      gradientUnits={1}
                      name="paint1_linear"
                      x1="10.5"
                      x2="10.5"
                      y1="10"
                      y2="0"
                    />
                  </RNSVGDefs>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              flex={1}
              marginLeft={15}
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginLeft": 15,
                  },
                ]
              }
            >
              <Text
                color="normalText"
                fontFamily="body"
                fontSize={2}
                style={
                  Array [
                    Object {
                      "color": "#262523",
                      "fontFamily": "Helvetica",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Nhạc chờ cho 
                <Text
                  color="normalText"
                  fontFamily="body"
                  fontWeight="bold"
                  style={
                    Array [
                      Object {
                        "color": "#262523",
                        "fontFamily": "Helvetica",
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  người gọi
                </Text>
              </Text>
              <Text
                color="lightText"
                fontFamily="body"
                fontSize={1}
                style={
                  Array [
                    Object {
                      "color": "#676767",
                      "fontFamily": "Helvetica",
                      "fontSize": 12,
                    },
                  ]
                }
              >
                Tính năng miễn phí cho phép người gọi nghe nhạc chờ do chính mình cài đặt khi gọi tới thuê bao khác
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
